generated/manifests/prod-axon/cilium/HTTPRoute-hubble-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hostnames:
    - hubble.zeroday.run
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: zeroday-run-https
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
