generated/manifests/prod-axon/cilium/CiliumClusterwideNetworkPolicy-allow-internal-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-internal-egress
spec:
  description: Policy to allow all Cilium managed endpoint to talk to all other cilium managed endpoints on egress
  egress:
    - toEndpoints:
        - {}
  endpointSelector:
    matchExpressions:
      - key: k8s:io.kubernetes.pod.namespace
        operator: NotIn
        values:
          - genie-eval
